--- a/translations/kangyur/placeholders/094-009_toh732,992-the_incantation_of_yasovati.xml
+++ b/translations/kangyur/placeholders/094-009_toh732,992-the_incantation_of_yasovati.xml
@@ -4,16 +4,16 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">grags ldan ma'i gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">yaśovatīdhāraṇī</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī of Yaśovatī</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa grags ldan ma'i gzungs/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">yaśovatīdhāraṇī</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">grags ldan ma'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryayaśovatīdhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa grags ldan ma'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryayaśovatīdhāraṇī</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -41,7 +41,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-16T09:19:49.58Z" user="admin">16/12/2022 09:19:49</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:19:45.191Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:19:45.191Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2022-12-16T09:20:17.751Z" user="admin">16/12/2022 09:20:17</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:19:45.191Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:19:45.191Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T09:20:11.974Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
