--- a/translations/kangyur/placeholders/090-016_toh572,993-the_queen_of_spells_anguli.xml
+++ b/translations/kangyur/placeholders/090-016_toh572,993-the_queen_of_spells_anguli.xml
@@ -13,16 +13,20 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">bklags pas 'grub pa bcom ldan 'das ma 'phags ma sor mo can zhes bya ba rig pa'i rgyal mo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">siddhipaṭhita­bhagavatyāryāṅgulī­nāmavidyārājñī</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-090-016"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh572" type="text">
                     <ref>Toh 572</ref>
                     <biblScope>vol.90, ff.(page missing)0-200r(pp.0-397)</biblScope>
-                    <location count-pages="4">
-                        <start volume="90" page="396"/>
-                        <end volume="90" page="399"/>
+                    <location work="UT4CZ5369" count-pages="4">
+                        <volume number="90" start-page="394" end-page="397"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12305" work="W22084"/>
@@ -30,16 +34,15 @@
                 <bibl key="toh993" type="text">
                     <ref>Toh 993</ref>
                     <biblScope>vol.101, ff.147r-148r(pp.293-295)</biblScope>
-                    <location count-pages="3">
-                        <start volume="101" page="295"/>
-                        <end volume="101" page="297"/>
+                    <location work="UT4CZ5369" count-pages="3">
+                        <volume number="101" start-page="293" end-page="295"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12756" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:07:19 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-16T09:21:04.478Z" user="admin">16/12/2022 09:21:04</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:21:00.092Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:21:00.092Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
