--- a/translations/kangyur/placeholders/090-016_toh572,993-the_queen_of_spells_anguli.xml
+++ b/translations/kangyur/placeholders/090-016_toh572,993-the_queen_of_spells_anguli.xml
@@ -4,17 +4,18 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">sor mo can zhes bya ba rig pa'i rgyal mo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">aṅgulīvidyārājñī</title>
                 <title type="mainTitle" xml:lang="en">The Queen of Spells, Aṅgulī</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">bklags pas grub pa bcom ldan 'das ma 'phags ma sor mo can zhes bya ba rig pa'i rgyal mo/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">siddhipaṭhita­bhagavatyāryāṅgulī­nāmavidyārājñī</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">aṅgulīvidyārājñī</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">sor mo can zhes bya ba rig pa'i rgyal mo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">aṅgulīnāmavidyārājñī</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">bklags pas 'grub pa bcom ldan 'das ma 'phags ma sor mo can zhes bya ba rig pa'i rgyal mo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">siddhipaṭhita­bhagavatyāryāṅgulī­nāmavidyārājñī</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">bklags pas 'grub pa bcom ldan 'das ma 'phags ma sor mo can zhes bya ba rig pa'i rgyal mo/</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">bklags pas grub pa bcom ldan 'das ma 'phags ma sor mo can zhes bya ba rig pa'i rgyal mo/</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -42,7 +43,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-16T09:21:04.478Z" user="admin">16/12/2022 09:21:04</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:21:00.092Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:21:00.092Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2022-12-16T09:21:48.776Z" user="admin">16/12/2022 09:21:48</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:21:00.092Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:21:00.092Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T09:21:43.009Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
