--- a/translations/kangyur/placeholders/094-012_toh735,994-the_sutra_of_parnasabari.xml
+++ b/translations/kangyur/placeholders/094-012_toh735,994-the_sutra_of_parnasabari.xml
@@ -9,11 +9,11 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">par+Na sha ba ri'i mdo/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa par+Na sha ba ri'i mdo/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa par+Na+Na sha ba ri'i mdo/</title>
-                <author role="translatorMain" ref="eft:team-40"/>
-                <author role="translatorEng" ref="eft:person-74">Ryan Damron</author>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -41,10 +41,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-15T14:18:31.578Z" user="admin">15/12/2022 14:18:31</note>
+                <note type="lastUpdated" date-time="2022-12-16T09:26:17.901Z" user="admin">16/12/2022 09:26:17</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-12-15T14:17:38.704Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-15T14:17:38.704Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-15T14:18:30.075Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-12-16T09:26:12.129Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
