--- a/translations/kangyur/placeholders/090-017_toh573,996-the_incantation_of_the_mother_of_all_dharmas.xml
+++ b/translations/kangyur/placeholders/090-017_toh573,996-the_incantation_of_the_mother_of_all_dharmas.xml
@@ -6,22 +6,26 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">chos thams cad kyi yum gyi gzungs/</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">sarvadharmamātṛkādhāraṇī</title>
-                <title type="mainTitle" xml:lang="en">The Incantation of the Mother of All Dharmas</title>
+                <title type="mainTitle" xml:lang="en">The Dhāraṇī of the Mother of All Dharmas</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa chos thams cad kyi yum zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryasarvadharmamātṛkānāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa chos thams cad kyi yum zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryāsarvadharmamātṛkānāmadhāraṇī</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-090-017"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh573" type="text">
                     <ref>Toh 573</ref>
                     <biblScope>vol.90, ff.200r-200r(pp.397-397)</biblScope>
-                    <location count-pages="1">
-                        <start volume="90" page="399"/>
-                        <end volume="90" page="399"/>
+                    <location work="UT4CZ5369" count-pages="1">
+                        <volume number="90" start-page="397" end-page="397"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12306" work="W22084"/>
@@ -29,16 +33,15 @@
                 <bibl key="toh996" type="text">
                     <ref>Toh 996</ref>
                     <biblScope>vol.101, ff.149v-150r(pp.298-299)</biblScope>
-                    <location count-pages="2">
-                        <start volume="101" page="300"/>
-                        <end volume="101" page="301"/>
+                    <location work="UT4CZ5369" count-pages="2">
+                        <volume number="101" start-page="298" end-page="299"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12759" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:07:22 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-16T09:27:21.383Z" user="admin">16/12/2022 09:27:21</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:27:16.997Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:27:16.997Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
