--- a/translations/kangyur/placeholders/090-017_toh573,996-the_incantation_of_the_mother_of_all_dharmas.xml
+++ b/translations/kangyur/placeholders/090-017_toh573,996-the_incantation_of_the_mother_of_all_dharmas.xml
@@ -4,16 +4,17 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">chos thams cad kyi yum gyi gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">sarvadharmamātṛkādhāraṇī</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī of the Mother of All Dharmas</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa chos thams cad kyi yum zhes bya ba'i gzungs/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">sarvadharmamātṛkādhāraṇī</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">chos thams cad kyi yum gyi gzungs/</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">āryāsarvadharmamātṛkānāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryasarvadharmamātṛkānāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa chos thams cad kyi yum zhes bya ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryāsarvadharmamātṛkānāmadhāraṇī</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -41,7 +42,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-16T09:27:21.383Z" user="admin">16/12/2022 09:27:21</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:27:16.997Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:27:16.997Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2022-12-16T09:27:50.528Z" user="admin">16/12/2022 09:27:50</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:27:16.997Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:27:16.997Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T09:27:44.771Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
