--- a/translations/kangyur/placeholders/091-057_toh660,997-the_incantation_the_mother_of_the_demons.xml
+++ b/translations/kangyur/placeholders/091-057_toh660,997-the_incantation_the_mother_of_the_demons.xml
@@ -6,22 +6,26 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">gza' rnams kyi yum gyi gzungs/</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">grahamātṛkādhāraṇī</title>
-                <title type="mainTitle" xml:lang="en">The Incantation, The Mother of the Demons</title>
+                <title type="mainTitle" xml:lang="en">The Dhāraṇī, The Mother of the Demons</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa gza' rnams kyi yum zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryagrahamātṛkānāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa gza' rnams kyi yum zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryagrahamātṛkānāmadhāraṇī</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-091-057"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh660" type="text">
                     <ref>Toh 660</ref>
                     <biblScope>vol.91, ff.180v-183v(pp.360-366)</biblScope>
-                    <location count-pages="7">
-                        <start volume="91" page="362"/>
-                        <end volume="91" page="368"/>
+                    <location work="UT4CZ5369" count-pages="7">
+                        <volume number="91" start-page="360" end-page="366"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12395" work="W22084"/>
@@ -29,16 +33,15 @@
                 <bibl key="toh997" type="text">
                     <ref>Toh 997</ref>
                     <biblScope>vol.101, ff.150r-153r(pp.299-305)</biblScope>
-                    <location count-pages="7">
-                        <start volume="101" page="301"/>
-                        <end volume="101" page="307"/>
+                    <location work="UT4CZ5369" count-pages="7">
+                        <volume number="101" start-page="299" end-page="305"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12760" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:07:24 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-16T09:28:35.682Z" user="admin">16/12/2022 09:28:35</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:28:31.295Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:28:31.295Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
