--- a/translations/kangyur/placeholders/091-058_toh661,998-the_incantation_the_mother_of_the_demons.xml
+++ b/translations/kangyur/placeholders/091-058_toh661,998-the_incantation_the_mother_of_the_demons.xml
@@ -6,22 +6,26 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">gza' rnams kyi yum gyi gzungs/</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">grahamātṛkādhāraṇī</title>
-                <title type="mainTitle" xml:lang="en">The Incantation, The Mother of the Demons</title>
+                <title type="mainTitle" xml:lang="en">The Dhāraṇī, The Mother of the Demons</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">gza' rnams kyi yum zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">grahamātṛkānāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">gza' rnams kyi yum zhes ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">grahamātṛkānāmadhāraṇī</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-091-058"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh661" type="text">
                     <ref>Toh 661</ref>
                     <biblScope>vol.91, ff.183v-186r(pp.366-371)</biblScope>
-                    <location count-pages="6">
-                        <start volume="91" page="368"/>
-                        <end volume="91" page="373"/>
+                    <location work="UT4CZ5369" count-pages="6">
+                        <volume number="91" start-page="366" end-page="371"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12396" work="W22084"/>
@@ -29,16 +33,15 @@
                 <bibl key="toh998" type="text">
                     <ref>Toh 998</ref>
                     <biblScope>vol.101, ff.153v-156r(pp.306-311)</biblScope>
-                    <location count-pages="6">
-                        <start volume="101" page="308"/>
-                        <end volume="101" page="313"/>
+                    <location work="UT4CZ5369" count-pages="6">
+                        <volume number="101" start-page="306" end-page="311"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12761" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:07:25 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-16T09:37:28.743Z" user="admin">16/12/2022 09:37:28</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:37:24.373Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:37:24.373Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
