--- a/translations/kangyur/placeholders/091-058_toh661,998-the_incantation_the_mother_of_the_demons.xml
+++ b/translations/kangyur/placeholders/091-058_toh661,998-the_incantation_the_mother_of_the_demons.xml
@@ -4,16 +4,17 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">gza' rnams kyi yum gyi gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">grahamātṛkādhāraṇī</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī, The Mother of the Demons</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">grahamātṛkādhāraṇī</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">gza' rnams kyi yum gyi gzungs/</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">grahamātṛkānāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">gza' rnams kyi yum zhes bya ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">grahamātṛkānāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">gza' rnams kyi yum zhes ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">grahamātṛkānāmadhāraṇī</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -41,7 +42,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-16T09:37:28.743Z" user="admin">16/12/2022 09:37:28</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:37:24.373Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:37:24.373Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2022-12-16T09:38:05.171Z" user="admin">16/12/2022 09:38:05</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:37:24.373Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:37:24.373Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T09:37:59.42Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
