--- a/translations/kangyur/placeholders/087-002_toh497,999-incantation_of_the_eight_goddesses.xml
+++ b/translations/kangyur/placeholders/087-002_toh497,999-incantation_of_the_eight_goddesses.xml
@@ -6,23 +6,27 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">lha mo brgyad kyi gzungs/</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">aṣṭadevīdhāraṇī</title>
-                <title type="mainTitle" xml:lang="en">Incantation of the Eight Goddesses</title>
+                <title type="mainTitle" xml:lang="en">Dhāraṇī of the Eight Goddesses</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa lha mo brgyad kyi gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryāṣṭadevidhāraṇī</title>
-                <title type="otherTitle" xml:lang="en">The Incantation of the Eight Goddesses</title>
+                <title type="otherTitle" xml:lang="en">The Dhāraṇī of the Eight Goddesses</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa lha mo brgyad kyi gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryāṣṭadevīdhāraṇī</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-087-002"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh497" type="text">
                     <ref>Toh 497</ref>
                     <biblScope>vol.87, ff.157r-158r(pp.313-315)</biblScope>
-                    <location count-pages="3">
-                        <start volume="87" page="315"/>
-                        <end volume="87" page="317"/>
+                    <location work="UT4CZ5369" count-pages="3">
+                        <volume number="87" start-page="313" end-page="315"/>
                     </location>
                     <idno parent-id="O1JC114941JC21414" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12217" work="W22084"/>
@@ -30,16 +34,15 @@
                 <bibl key="toh999" type="text">
                     <ref>Toh 999</ref>
                     <biblScope>vol.101, ff.156r-157v(pp.311-314)</biblScope>
-                    <location count-pages="4">
-                        <start volume="101" page="313"/>
-                        <end volume="101" page="316"/>
+                    <location work="UT4CZ5369" count-pages="4">
+                        <volume number="101" start-page="311" end-page="314"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12762" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:07:26 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-16T09:38:48.342Z" user="admin">16/12/2022 09:38:48</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:38:43.966Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:38:43.966Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
