--- a/translations/kangyur/placeholders/087-002_toh497,999-incantation_of_the_eight_goddesses.xml
+++ b/translations/kangyur/placeholders/087-002_toh497,999-incantation_of_the_eight_goddesses.xml
@@ -4,17 +4,18 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">lha mo brgyad kyi gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">aṣṭadevīdhāraṇī</title>
                 <title type="mainTitle" xml:lang="en">Dhāraṇī of the Eight Goddesses</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa lha mo brgyad kyi gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryāṣṭadevidhāraṇī</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">aṣṭadevīdhāraṇī</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">lha mo brgyad kyi gzungs/</title>
                 <title type="otherTitle" xml:lang="en">The Dhāraṇī of the Eight Goddesses</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa lha mo brgyad kyi gzungs/</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">āryāṣṭadevidhāraṇī</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryāṣṭadevīdhāraṇī</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa lha mo brgyad kyi gzungs/</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -42,7 +43,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-16T09:38:48.342Z" user="admin">16/12/2022 09:38:48</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:38:43.966Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:38:43.966Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2022-12-16T09:39:21.259Z" user="admin">16/12/2022 09:39:21</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:38:43.966Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:38:43.966Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T09:39:15.479Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
