--- a/translations/kangyur/placeholders/088-003_toh509,920-incantation_of_the_hundred_thousand_ornaments_of_the_essence_of_awakening.xml
+++ b/translations/kangyur/placeholders/088-003_toh509,920-incantation_of_the_hundred_thousand_ornaments_of_the_essence_of_awakening.xml
@@ -6,20 +6,24 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">byang chub kyi snying po'i rgyan 'bum gyi gzungs/</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">bodhigarbhālaṃkāralakṣadhāraṇī</title>
-                <title type="mainTitle" xml:lang="en">Incantation of the Hundred Thousand Ornaments of the Essence of Awakening</title>
+                <title type="mainTitle" xml:lang="en">Dhāraṇī of the Hundred Thousand Ornaments of the Essence of Awakening</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">byang chub kyi snying po'i rgyan 'bum gyi gzungs</title>
-                <title type="otherTitle" xml:lang="en">The Incantation of the One Hundred Thousand Ornaments of the Essence of Awakening</title>
+                <title type="otherTitle" xml:lang="en">The Dhāraṇī of the One Hundred Thousand Ornaments of the Essence of Awakening</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-088-003"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh509" type="text">
                     <ref>Toh 509</ref>
                     <biblScope>vol.88, ff.7v-8r(pp.14-15)</biblScope>
-                    <location count-pages="2">
-                        <start volume="88" page="16"/>
-                        <end volume="88" page="17"/>
+                    <location work="UT4CZ5369" count-pages="2">
+                        <volume number="88" start-page="14" end-page="15"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12231" work="W22084"/>
@@ -27,16 +31,15 @@
                 <bibl key="toh920" type="text">
                     <ref>Toh 920</ref>
                     <biblScope>vol.100, ff.264r-264v(pp.527-528)</biblScope>
-                    <location count-pages="2">
-                        <start volume="100" page="529"/>
-                        <end volume="100" page="530"/>
+                    <location work="UT4CZ5369" count-pages="2">
+                        <volume number="100" start-page="527" end-page="528"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12682" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:06:02 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-16T09:46:07.479Z" user="admin">16/12/2022 09:46:07</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:46:03.111Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:46:03.111Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
