--- a/translations/kangyur/placeholders/088-003_toh509,920-incantation_of_the_hundred_thousand_ornaments_of_the_essence_of_awakening.xml
+++ b/translations/kangyur/placeholders/088-003_toh509,920-incantation_of_the_hundred_thousand_ornaments_of_the_essence_of_awakening.xml
@@ -4,14 +4,16 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">byang chub kyi snying po'i rgyan 'bum gyi gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">bodhigarbhālaṃkāralakṣadhāraṇī</title>
                 <title type="mainTitle" xml:lang="en">Dhāraṇī of the Hundred Thousand Ornaments of the Essence of Awakening</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">byang chub kyi snying po'i rgyan 'bum gyi gzungs</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">bodhigarbhālaṃkāralakṣadhāraṇī</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">byang chub kyi snying po'i rgyan 'bum gyi gzungs/</title>
                 <title type="otherTitle" xml:lang="en">The Dhāraṇī of the One Hundred Thousand Ornaments of the Essence of Awakening</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">byang chub kyi snying po'i rgyan 'bum gyi gzungs</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-23">Bruno Galasek-Hul</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -39,7 +41,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-16T09:46:07.479Z" user="admin">16/12/2022 09:46:07</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:46:03.111Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:46:03.111Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2022-12-16T09:46:37.155Z" user="admin">16/12/2022 09:46:37</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:46:03.111Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:46:03.111Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T09:46:31.432Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
