--- a/translations/kangyur/placeholders/088-015_toh521,981-the_essence_of_dependent_arising.xml
+++ b/translations/kangyur/placeholders/088-015_toh521,981-the_essence_of_dependent_arising.xml
@@ -12,16 +12,20 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">rten cing 'brel bar 'byung ba'i snying po/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryapratītyasamutpādahṛdayanāma</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-088-015"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh521" type="text">
                     <ref>Toh 521</ref>
                     <biblScope>vol.88, ff.42r-42r(pp.83-83)</biblScope>
-                    <location count-pages="1">
-                        <start volume="88" page="85"/>
-                        <end volume="88" page="85"/>
+                    <location work="UT4CZ5369" count-pages="1">
+                        <volume number="88" start-page="83" end-page="83"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12244" work="W22084"/>
@@ -29,16 +33,15 @@
                 <bibl key="toh981" type="text">
                     <ref>Toh 981</ref>
                     <biblScope>vol.101, ff.99v-100r(pp.198-199)</biblScope>
-                    <location count-pages="2">
-                        <start volume="101" page="200"/>
-                        <end volume="101" page="201"/>
+                    <location work="UT4CZ5369" count-pages="2">
+                        <volume number="101" start-page="198" end-page="199"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12744" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:07:06 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-16T09:47:18.098Z" user="admin">16/12/2022 09:47:18</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:47:13.737Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:47:13.737Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
