--- a/translations/kangyur/placeholders/088-027_toh533,860-the_incantation_the_essence_of_sakyamuni.xml
+++ b/translations/kangyur/placeholders/088-027_toh533,860-the_incantation_the_essence_of_sakyamuni.xml
@@ -6,20 +6,24 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">shAkya thub pa'i snying po'i gzungs/</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
-                <title type="mainTitle" xml:lang="en">The Incantation, the Essence of Śākyamuni</title>
+                <title type="mainTitle" xml:lang="en">The Dhāraṇī, the Essence of Śākyamuni</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa shAkya thub pa'i snying po'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa shAkya thub pa'i snying po'i gzungs/</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-088-027"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh533" type="text">
                     <ref>Toh 533</ref>
                     <biblScope>vol.88, ff.82v-82v(pp.164-164)</biblScope>
-                    <location count-pages="1">
-                        <start volume="88" page="166"/>
-                        <end volume="88" page="166"/>
+                    <location work="UT4CZ5369" count-pages="1">
+                        <volume number="88" start-page="164" end-page="164"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12256" work="W22084"/>
@@ -27,16 +31,15 @@
                 <bibl key="toh860" type="text">
                     <ref>Toh 860</ref>
                     <biblScope>vol.100, ff.87r-87r(pp.173-173)</biblScope>
-                    <location count-pages="1">
-                        <start volume="100" page="175"/>
-                        <end volume="100" page="175"/>
+                    <location work="UT4CZ5369" count-pages="1">
+                        <volume number="100" start-page="173" end-page="173"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12622" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:04:55 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-16T09:48:41.155Z" user="admin">16/12/2022 09:48:41</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:48:36.796Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:48:36.796Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
