--- a/translations/kangyur/placeholders/088-028_toh534,861-the_incantation_the_essence_of_vairocana.xml
+++ b/translations/kangyur/placeholders/088-028_toh534,861-the_incantation_the_essence_of_vairocana.xml
@@ -4,14 +4,15 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">rnam par snang mdzad kyi snying po'i gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī, the Essence of Vairocana</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">rnam par snang mdzad kyi snying po'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rnam par snang mdzad kyi snying po zhes bya ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rnam par snang mdzad kyi snying po zhes bya ba'i gzungs/</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-23">Bruno Galasek-Hul</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -39,7 +40,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-16T09:49:53.673Z" user="admin">16/12/2022 09:49:53</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:49:49.314Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:49:49.314Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2022-12-16T09:50:55.984Z" user="admin">16/12/2022 09:50:55</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:49:49.314Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:49:49.314Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T09:50:50.24Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
