--- a/translations/kangyur/placeholders/088-029_toh535,868-recollecting_the_names_of_candraprabha.xml
+++ b/translations/kangyur/placeholders/088-029_toh535,868-recollecting_the_names_of_candraprabha.xml
@@ -10,16 +10,20 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">zla ba'i 'od kyi mtshan rjes su dran pa/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">zla ba'i 'od kyi mtshan rjes su dran pa/</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-088-029"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh535" type="text">
                     <ref>Toh 535</ref>
                     <biblScope>vol.88, ff.82v-83r(pp.164-165)</biblScope>
-                    <location count-pages="2">
-                        <start volume="88" page="166"/>
-                        <end volume="88" page="167"/>
+                    <location work="UT4CZ5369" count-pages="2">
+                        <volume number="88" start-page="164" end-page="165"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12258" work="W22084"/>
@@ -27,16 +31,15 @@
                 <bibl key="toh868" type="text">
                     <ref>Toh 868</ref>
                     <biblScope>vol.100,ff.88v-89r(pp.176-177)</biblScope>
-                    <location count-pages="2">
-                        <start volume="100" page="178"/>
-                        <end volume="100" page="179"/>
+                    <location work="UT4CZ5369" count-pages="2">
+                        <volume number="100" start-page="176" end-page="177"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12630" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:05:04 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-16T09:51:42.952Z" user="admin">16/12/2022 09:51:42</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:51:38.578Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:51:38.578Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
