--- a/translations/kangyur/placeholders/083-022_toh474-the_tantra_of_red_yamari.xml
+++ b/translations/kangyur/placeholders/083-022_toh474-the_tantra_of_red_yamari.xml
@@ -11,12 +11,13 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">śrīraktayamāritantrarājanāma</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2019</date>
+                <edition>v 0.0.2 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-083-022"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh474" type="text">
@@ -30,8 +31,8 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2019-12-20T13:06:59.197Z" user="admin">20/12/2019 13:06:59</note>
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="lastUpdated" date-time="2022-12-16T09:52:56.855Z" user="admin">16/12/2022 09:52:56</note>
+<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:52:52.539Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T09:52:52.539Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
