--- a/translations/kangyur/placeholders/088-031_toh537,870-recollecting_the_names_of_buddha_sikhin.xml
+++ b/translations/kangyur/placeholders/088-031_toh537,870-recollecting_the_names_of_buddha_sikhin.xml
@@ -4,16 +4,18 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">rin chen gtsug tor can gyi mtshan rjes dran/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="en">Recollecting the Names of Buddha Śikhin</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">sangs rgyas rin chen gtsug tor can gyi mtshan rjes su dran pa/</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">sangs rgyas rin chen gtsug tor gyi mtshan rjes dran/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">rin chen gtsug tor can gyi mtshan rjes dran/</title>
                 <title type="otherTitle" xml:lang="en">Recollecting the Names of the Buddha Śikhin</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">sangs rgyas rin chen gtsug tor gyi mtshan rjes su dran pa'i gzungs/</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">sangs rgyas rin chen gtsug tor gyi mtshan rjes dran/</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">sangs rgyas rin chen gtsug tor can gyi mtshan rjes su dran pa/</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-61">Catherine Dalton</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -41,7 +43,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-16T10:01:28.679Z" user="admin">16/12/2022 10:01:28</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T10:01:24.345Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T10:01:24.345Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2022-12-16T10:02:00.141Z" user="admin">16/12/2022 10:02:00</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-12-16T10:01:24.345Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T10:01:24.345Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T10:01:54.449Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
