--- a/translations/kangyur/placeholders/088-033_toh539,1069-the_incantation_for_homage.xml
+++ b/translations/kangyur/placeholders/088-033_toh539,1069-the_incantation_for_homage.xml
@@ -6,16 +6,17 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">phyag bya/ (phyag bya'i gzungs/)</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
-                <title type="mainTitle" xml:lang="en">[The Incantation for] Homage</title>
+                <title type="mainTitle" xml:lang="en">[The Dhāraṇī for] Homage</title>
                 <title type="otherTitle" xml:lang="en">[Note: the Tōhoku catalogue lists 7 short dhāraṇīs that it includes under the single Toh catalogue number, 539; this is the first.]</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2019</date>
+                <edition>v 0.0.2 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-088-033"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh539" type="text">
@@ -38,9 +39,9 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2019-12-20T13:03:28.742Z" user="admin">20/12/2019 13:03:28</note>
+                <note type="lastUpdated" date-time="2022-12-16T10:09:02.111Z" user="admin">16/12/2022 10:09:02</note>
             
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T10:08:57.785Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T10:08:57.785Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
