--- a/translations/kangyur/placeholders/101-128_toh539c,1072-the_incantation_for_producing_clouds_of_offerings.xml
+++ b/translations/kangyur/placeholders/101-128_toh539c,1072-the_incantation_for_producing_clouds_of_offerings.xml
@@ -6,11 +6,16 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">mchod pa'i sprin 'byung ba/ (mchod pa'i sprin 'byung ba'i gzungs/)</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
-                <title type="mainTitle" xml:lang="en">[The Incantation for] Clouds of Offerings to be Produced</title>
+                <title type="mainTitle" xml:lang="en">[The Dhāraṇī for] Clouds of Offerings to be Produced</title>
                 <title type="otherTitle" xml:lang="en">[Note: the Tōhoku catalogue lists 7 short dhāraṇīs that it includes under the single Toh catalogue number, 539; this is the fourth.]</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-101-128"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh539c" type="text">
@@ -33,7 +38,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2019-11-05T14:28:02.906Z" user="admin">05/11/2019 14:28:02</note>
+                <note type="lastUpdated" date-time="2022-12-16T10:12:41.817Z" user="admin">16/12/2022 10:12:41</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T10:12:37.488Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T10:12:37.488Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
