--- a/translations/kangyur/placeholders/090-027_toh583,939-the_incantation_that_captures_the_perfection_of_wisdom_in_one_hundred_thousand_lines.xml
+++ b/translations/kangyur/placeholders/090-027_toh583,939-the_incantation_that_captures_the_perfection_of_wisdom_in_one_hundred_thousand_lines.xml
@@ -6,22 +6,26 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">sher phyin stong phrag brgya pa bzung ba'i gzungs/</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
-                <title type="mainTitle" xml:lang="en">The Incantation that Captures the Perfection of Wisdom in One Hundred Thousand Lines</title>
+                <title type="mainTitle" xml:lang="en">The Dhāraṇī that Captures the Perfection of Wisdom in One Hundred Thousand Lines</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">shes rab kyi pha rol tu phyin pa stong phrag brgya pa bzung bar 'gyur ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">sher phyin stong phrag brgya pa gzung ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="en">The Incantation that Captures the Perfection of Wisdom in a Hundred Thousand Lines</title>
+                <title type="otherTitle" xml:lang="en">The Dhāraṇī that Captures the Perfection of Wisdom in a Hundred Thousand Lines</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">shes rab kyi pha rol tu phyin pa stong phrag brgya pa gzung bar 'gyur ba'i gzungs/</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-090-027"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh583" type="text">
                     <ref>Toh 583</ref>
                     <biblScope>vol.90, ff.204r-204r(pp.405-405)</biblScope>
-                    <location count-pages="1">
-                        <start volume="90" page="407"/>
-                        <end volume="90" page="407"/>
+                    <location work="UT4CZ5369" count-pages="1">
+                        <volume number="90" start-page="405" end-page="405"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12316" work="W22084"/>
@@ -29,16 +33,15 @@
                 <bibl key="toh939" type="text">
                     <ref>Toh 939</ref>
                     <biblScope>vol.100, ff.282r-282r(563-563)</biblScope>
-                    <location count-pages="1">
-                        <start volume="100" page="565"/>
-                        <end volume="100" page="565"/>
+                    <location work="UT4CZ5369" count-pages="1">
+                        <volume number="100" start-page="563" end-page="563"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12701" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:06:23 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-16T10:22:07.497Z" user="admin">16/12/2022 10:22:07</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T10:22:03.166Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T10:22:03.166Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
