--- a/translations/kangyur/placeholders/090-028_toh584,940-the_incantation_that_captures_the_avatamsaka.xml
+++ b/translations/kangyur/placeholders/090-028_toh584,940-the_incantation_that_captures_the_avatamsaka.xml
@@ -4,15 +4,17 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">phal po che bzung ba'i gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī that Captures the Avataṃsaka</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">phal po che bzung ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa phal po che bzung bar 'gyur ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">phal po che gzung ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa phal po che gzung bar 'gyur ba'i gzungs/</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">phal po che gzung ba'i gzungs/</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-7">Paul Hackett</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -40,7 +42,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-16T10:23:44.76Z" user="admin">16/12/2022 10:23:44</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T10:23:40.423Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T10:23:40.423Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2022-12-16T10:24:33.729Z" user="admin">16/12/2022 10:24:33</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-12-16T10:23:40.423Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T10:23:40.423Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T10:24:28.022Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
