--- a/translations/kangyur/placeholders/076-014_toh359a-the_sutra_of_the_fourty_two_sections.xml
+++ b/translations/kangyur/placeholders/076-014_toh359a-the_sutra_of_the_fourty_two_sections.xml
@@ -4,19 +4,19 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">dum bu zhe gnyis pa'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn"/>
                 <title type="mainTitle" xml:lang="en">The Sūtra of the Forty-Two Sections</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">phags pa dum bu zhe gnyis pa zhes bya
-                    ba'i mdo</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn"/>
+                <title type="mainTitle" xml:lang="Bo-Ltn">dum bu zhe gnyis pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="en">[Note: this sūtra, translated from Chinese,
                     was added to later printings of the Degé Kangyur and appears not to be found in
                     any other Kangyurs. The Degé gives no Sanskrit title but supplies a
                     transliterated Chinese title "h+pho bsho za shI i la Tad kying."]</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">phags pa dum bu zhe gnyis pa zhes bya
+                    ba'i mdo</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-7">Paul Hackett</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -35,9 +35,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-16T10:31:59.181Z" user="admin">16/12/2022 10:31:59</note>
+                <note type="lastUpdated" date-time="2022-12-16T10:32:30.863Z" user="admin">16/12/2022 10:32:30</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-12-16T10:31:54.859Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T10:31:54.859Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T10:32:25.172Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
