--- a/translations/kangyur/placeholders/039-001_toh45-the_chapter_explaining_the_three_vows.xml
+++ b/translations/kangyur/placeholders/039-001_toh45-the_chapter_explaining_the_three_vows.xml
@@ -10,12 +10,12 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryatrisaṃvara­nirdeśaparivartanāma­māhayānasūtra</title>
                 <title type="otherTitle" xml:lang="zh">《三律儀品》(大正藏：大寶積經三律儀會第一)</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sdom pa gsum bstan pa'i le'u zhes bya ba theg pa chen po'i mdo</title>
-                <author role="translatorMain" ref="contributors.xml#team-9"/>
-                <consultant role="projectManager" ref="contributors.xml#person-50">Dr. Andreas Doctor</consultant>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-338">Ana Cristina Lopes</author>
                 <sponsor ref="sponsors.xml#sponsor-207">Zhu Yuanhua, Zhang Chunjing</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2019</date>
+                <edition>v 0.0.4 <date>2019</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -34,8 +34,9 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-10T16:39:48.55Z" user="admin">10/06/2022 16:39:48</note>
+                <note type="lastUpdated" date-time="2022-12-16T15:13:39.01Z" user="admin">16/12/2022 15:13:39</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-12-16T15:13:34.718Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
